# kidschores-ha

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHORE_TIMER_DESIGN.md  COMMIT_MESSAGE.txt  CONF_ANALYSIS.md  NOTIFICATION_SERVICE_CALLS.md  NOTIFICATION_TESTING.md  PHASE1_REFACTORING_COMPLETE.md  QUALITY_REVIEW_PHASE_4_3.md  README.md  audit_attribute_translations.py  backup_chore_ops.py  crowdin.yml  entity_translation_audit.md  entity_translation_implementation_plan.md  hacs.json  mypy_quick.ini  pyproject.toml  pyrightconfig.json  pytest.ini  test_debug_migration.py  test_entity_names_debug.py
.github/: copilot-instructions.md
.github/agents/: KidsChores Archivist.agent.md  KidsChores Builder.agent.md  KidsChores Code Review Agent.agent.md  KidsChores Documentarian.md  KidsChores Maintainer.md  KidsChores Plan Agent.agent.md  KidsChores Plan Manager.md  KidsChores Strategist.agent.md  KidsChores Test Builder.agent.md
.github/workflows/: lint-validation.yaml  translation-sync-manual.yaml  translation-sync.yaml  validate.yaml
custom_components/kidschores/: __init__.py  backup_helpers.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  coordinator_chore_operations.py  data_builders.py  datetime.py  diagnostics.py  entity.py  entity_helpers.py  flow_helpers.py  icons.json  kc_helpers.py  manifest.json  migration_pre_v42.py  migration_pre_v50.py  notification_action_handler.py  notification_helper.py  options_flow.py  quality_scale.yaml  schedule_engine.py  select.py  sensor.py  sensor_legacy.py  services.py  services.yaml  statistics_engine.py  storage_manager.py  store.py  strings.json  translation_manager.py  type_defs.py
docs/: ARCHITECTURE.md  ARCHITECTURE_UPDATE_SUMMARY.md  CALENDAR_REFACTORING_COMPLETE.md  CODE_REVIEW_GUIDE.md  DASHBOARD_TEMPLATE_GUIDE.md  DEVELOPMENT_STANDARDS.md  DEVELOPMENT_STATUS.md  KC_HELPERS_CODE_REVIEW.md  LEGACY_CLEANUP.md  LOCALIZATION_MODERNIZATION_PLAN.md  PLAN_TEMPLATE.md  QUALITY_MAINTENANCE_REFERENCE.md  QUALITY_REFERENCE.md  REGISTRY_UPDATE_FIXES.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.4.0.md  RISK_ANALYSIS_ZOMBIE_MANAGERS_AND_CACHE.md  RUFF_CODE_EXAMPLES.md  RUFF_MIGRATION.md  RUFF_MIGRATION_SUMMARY.md  SENSOR_CLEANUP_AND_PERFORMANCE.md  STANDARDS.md  STORAGE_MANAGER_IMPROVEMENTS.md  STORAGE_TESTING_SUMMARY.md
docs/archive/: CALENDAR_REFACTORING_PLAN.md  COMMIT_MESSAGE.txt  COORDINATOR_CODE_REVIEW_LEGACY.md  COORDINATOR_REVIEW_IMPROVEMENTS_LEGACY.md  DATA_RECOVERY_BACKUP_PLAN_LEGACY.md  IMPLEMENTATION_SUMMARY.md  LEGACY_CLEANUP_LEGACY.md  LINTING_UPDATES.md  LOCALIZATION_MODERNIZATION_PLAN_LEGACY.md  MIGRATION_TESTING_PLAN_LEGACY.md  REVIEW_FIXES_NEEDED.md  SENSOR_REFACTORING_PLAN.md  SERVICES_IMPROVEMENT_PLAN_LEGACY.md  SERVICES_PHASE2B_IMPLEMENTATION_PLAN_LEGACY.md  debug_coordinator.py
docs/completed/: APPROVAL_PERIOD_FIX_COMPLETED.md  ASYNC_LISTENER_MIGRATION_COMPLETED.md  ASYNC_LISTENER_MIGRATION_SUP_IMPLEMENTATION_MATRIX_COMPLETED.md  ATOMIC_MIGRATION_HARDENING_COMPLETED.md  BACKUP_FORMS_PHASE1_COMPLETE.md  BACKUP_FORMS_TRANSLATION_REFACTOR_PLAN_COMPLETE.md  BADGE_ASSIGNMENT_CONSISTENCY_PLAN_COMPLETE.md  BADGE_EVALUATION_FLOW_ANALYSIS.md  BADGE_OPTIMIZATION_PROPOSAL_COMPLETE.md  BOUNDARY_VIOLATIONS_FIX_COMPLETED.md  CALENDAR_SCHEDULER_PERFORMANCE_COMPLETED.md  CHORE_ENHANCEMENTS_PLAN_COMPLETE.md  CHORE_FREQUENCY_ENHANCEMENTS_COMPLETE.md  CHORE_GAP_COVERAGE_PLAN_IN-PROCESS.md  CHORE_LOGIC_CONSOLIDATION_PLAN_COMPLETED.md  CHORE_LOGIC_DATA_PROVIDER_REFACTOR_COMPLETED.md  CHORE_LOGIC_PHASE5_WAITING_CLAIM_PATH_COMPLETE.md  CHORE_LOGIC_PHASE5_WAITING_CLAIM_PATH_COMPLETED.md  CHORE_LOGIC_V050_COMPLETED.md  CHORE_LOGIC_V050_SUP_STATE_MATRIX.md  CHORE_OPERATIONS_MIGRATION_COMPLETED.md  CHORE_STATE_ARCHITECTURE_REVIEW_COMPLETED.md  CHORE_STATE_ARCHITECTURE_REVIEW_SUP_FEEDBACK_RESPONSE.md  CHORE_STATE_ARCHITECTURE_REVIEW_SUP_MISSED_STREAK_PROPOSAL.md  CHORE_STATE_ARCHITECTURE_REVIEW_SUP_TECH_SPEC.md  CHORE_TIMER_REFACTOR_COMPLETE.md  CHORE_TIMER_REFACTOR_SUP_TEST_SCENARIOS.md  CHORE_TIME_PROCESSING_REFACTOR_COMPLETED.md  CHORE_UX_IMPROVEMENTS_COMPLETED.md  CHORE_WORKFLOW_TESTING_IN-PROCESS.md  CODEBASE_STANDARDIZATION_AUDIT_PLAN_COMPLETE.md  CODEBASE_STANDARDIZATION_SUPPORT_CONFIG_OPTIONS_FLOWS_AUDIT.json  CODEBASE_STANDARDIZATION_SUPPORT_COORDINATOR_SERVICES_AUDIT.json  CODEBASE_STANDARDIZATION_SUPPORT_ENTITY_PLATFORMS_AUDIT.json  CODEBASE_STANDARDIZATION_SUPPORT_PHASE3C_NOTIFICATION_FINDINGS.md  COORDINATOR_CASCADE_REFACTOR_COMPLETED.md  (+126 more)
tests/: AGENT_TESTING_USAGE_GUIDE.md  AGENT_TEST_CREATION_INSTRUCTIONS.md  FIXTURE_GUIDE.md  README.md  SCENARIOS.md  SCENARIO_FULL_COVERAGE.md  SERVICE_TESTING_PATTERNS.md  TESTDATA_CATALOG.md  TESTING_AGENT_INSTRUCTIONS.md  TESTING_GUIDE.md  TESTING_OPTIMIZATION_RECOMMENDATIONS.md  TEST_CREATION_TEMPLATE.md  TEST_SCENARIOS.md  __init__.py  conftest.py  entity_validation_helpers.py  flow_test_helpers.py  performance_results.json  test_applicable_days.py  test_approval_reset_overdue_interaction.py  test_approval_reset_timing.py  test_auto_approve_feature.py  test_backup_essential_flows_fixed.py  test_backup_flow_navigation.py  test_backup_restore_scenarios.py  test_backup_utilities.py  test_badge_assignment_baseline.py  test_badge_assignment_noncumulative_baseline.py  test_badge_creation.py  test_badge_cumulative.py  test_badge_helpers.py  test_badge_migration_baseline.py  test_badge_periods_initialization.py  test_badge_progress_initialization.py  test_badge_target_types.py  test_badge_target_types_comprehensive.py  test_badge_validation_baseline.py  test_calendar.py  test_calendar_daily_limiter.py  test_calendar_feature.py  (+132 more)
utils/: LESSONS_LEARNED_LINTING.md  LINTING_OPTIMIZATION.md  MIGRATION_VALIDATION_FRAMEWORK.md  README.md  README_LINTING.md  TYPE_ERROR_STRATEGY.md  check_boundaries.py  cleanup_pylint_suppressions.py  convert_stress_scenario.py  extract_method.py  lint_check.py  load_scenario_live.py  load_test_scenario_to_live_ha.py  phase4b_rename_reorganize.sh  quick_lint.sh  test_cleanup_logic.py  test_notifications.sh  validate_migration.py
(+392 files in other folders)
